--- a/apps/students/templates/form.html
+++ b/apps/students/templates/form.html
@@ -649,7 +649,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-floating">
-                        {{ form.religious_affiliation|add_class:"form-select" }}
+                        {{ form.religious_affiliation }}
                         <label for="{{ form.religious_affiliation.id_for_label }}">Religious Affiliation</label>
                         {% if form.religious_affiliation.errors %}
                             <div class="invalid-feedback d-block">
@@ -661,6 +661,7 @@
                     </div>
                 </div>
             </div>
+            
             
             <!-- Government Identifiers -->
             <div class="field-group">
