--- a/apps/students/templates/list.html
+++ b/apps/students/templates/list.html
@@ -769,6 +769,15 @@
 
 {% block extra_scripts %}
 <script>
+
+/* ============================================================================
+   DJANGO URL TEMPLATES (DO NOT HARDCODE PATHS)
+============================================================================ */
+const STUDENT_PROFILE_URL =
+    "{% url 'students:student_profile' '00000000-0000-0000-0000-000000000000' %}";
+const STUDENT_EDIT_URL =
+    "{% url 'students:student_edit' '00000000-0000-0000-0000-000000000000' %}";
+
 // ============================================================================
 // MAIN STUDENT LIST FUNCTIONALITY
 // ============================================================================
@@ -925,6 +934,16 @@ $(document).ready(function() {
     }
 
     function buildActionsDropdown(studentId) {
+
+        const profileUrl = STUDENT_PROFILE_URL.replace(
+            '00000000-0000-0000-0000-000000000000',
+            studentId
+        );
+        const editUrl = STUDENT_EDIT_URL.replace(
+            '00000000-0000-0000-0000-000000000000',
+            studentId
+        );
+
         return `
             <div class="dropdown">
                 <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle"
@@ -932,10 +951,10 @@ $(document).ready(function() {
                     <i class="fa fa-ellipsis-v me-1"></i> Actions
                 </button>
                 <div class="dropdown-menu dropdown-menu-end">
-                    <a class="dropdown-item text-success" href="/students/profile/${studentId}/">
+                    <a class="dropdown-item text-success" href="${profileUrl}">
                         <i class="fa fa-eye me-2"></i> View
                     </a>
-                    <a class="dropdown-item text-warning" href="/students/edit/${studentId}/">
+                    <a class="dropdown-item text-warning" href="${editUrl}">
                         <i class="fa fa-edit me-2"></i> Edit
                     </a>
                     <a class="dropdown-item" href="#">
