--- a/templates/base.html
+++ b/templates/base.html
@@ -35,20 +35,27 @@
     <!-- Page-specific extra CSS -->
     {% block extra_css %}{% endblock %}
 </head>
-<body>
-    <!-- App Container -->
-    <div class="app-container" >
 
-        <!-- Header Section -->
-        {% include 'partials/header.html' %}
+<!-- Apply saved theme preferences to body tag -->
+<body class="app {% if fixed_header %}fixed-header{% endif %} {% if fixed_sidebar %}fixed-sidebar{% endif %} {% if fixed_footer %}fixed-footer{% endif %} {{ page_tabs_style|default:'body-tabs-shadow' }} {{ theme_color|default:'app-theme-white' }}">
+    
+    <!-- App Container -->
+    <div class="app-container app-theme-white">
+
+        <!-- Header Section with saved color scheme -->
+        <div class="app-header header-shadow {{ header_class }}">
+            {% include 'partials/header.html' %}
+        </div>
 
         <!-- Theme Settings Panel -->
         {% include 'partials/theme_settings.html' %}
 
         <div class="app-main">
 
-            <!-- Sidebar Navigation -->
-            {% include 'partials/sidebar.html' %}
+            <!-- Sidebar Navigation with saved color scheme -->
+            <div class="app-sidebar sidebar-shadow {{ sidebar_class }}">
+                {% include 'partials/sidebar.html' %}
+            </div>
 
             <div class="app-main__outer">
                 <div class="app-main__inner">
@@ -92,10 +99,26 @@
     <script type="text/javascript" src="{% static 'js/scrollbar.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/toastr.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/treeview.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/app.js' %}"></script>
+
 
     <!-- Template navigation JS File -->
     <script src="{% static 'js/sidebar-nav.js' %}"></script>
+
+    <!-- Template main JS File -->
+    <script type="text/javascript" src="{% static 'js/app.js' %}"></script>
+
+    <!-- Pass Django context to JavaScript -->
+    <script>
+        window.THEME_CONFIG = {
+            headerClass: "{{ header_class|default:'' }}",
+            sidebarClass: "{{ sidebar_class|default:'' }}",
+            pageTabsStyle: "{{ page_tabs_style|default:'body-tabs-shadow' }}",
+            themeColor: "{{ theme_color|default:'app-theme-white' }}"
+        };
+    </script>
+    
+    <!-- Theme Settings Management -->
+    <script src="{% static 'js/theme-settings.js' %}"></script>
 
     {% block extra_scripts %}{% endblock %}
 </body>
