--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -1,95 +1,114 @@
 {% load static %} 
-<div class="app-sidebar sidebar-shadow {% if user.sidebar_class %}{{ user.sidebar_class }}{% endif %}">
-    <div class="app-header__logo">
-        <div class="logo-src"></div>
-        <div class="header__pane ms-auto">
-            <div>
-                <button type="button" class="hamburger close-sidebar-btn hamburger--elastic" data-class="closed-sidebar">
-                    <span class="hamburger-box">
-                        <span class="hamburger-inner"></span>
-                    </span>
-                </button>
-            </div>
-        </div>
-    </div>
-    <div class="app-header__mobile-menu">
+
+<div class="app-header__logo">
+    <div class="logo-src"></div>
+    <div class="header__pane ms-auto">
         <div>
-            <button type="button" class="hamburger hamburger--elastic mobile-toggle-nav">
+            <button type="button" class="hamburger close-sidebar-btn hamburger--elastic" data-class="closed-sidebar">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
                 </span>
             </button>
         </div>
     </div>
-    <div class="app-header__menu">
-        <span>
-            <button type="button" class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
-                <span class="btn-icon-wrapper">
-                    <i class="fa fa-ellipsis-v fa-w-6"></i>
-                </span>
-            </button>
-        </span>
+</div>
+<div class="app-header__mobile-menu">
+    <div>
+        <button type="button" class="hamburger hamburger--elastic mobile-toggle-nav">
+            <span class="hamburger-box">
+                <span class="hamburger-inner"></span>
+            </span>
+        </button>
     </div>
-    <div class="scrollbar-sidebar">
-        <div class="app-sidebar__inner">
-            <ul class="vertical-nav-menu" id="sidebar-menu">
-                <!-- Dashboard -->
-                <li class="app-sidebar__heading">Main</li>
-                <li>
-                    <a href="{% url 'core:home' %}">
-                        <i class="metismenu-icon pe-7s-home"></i>
-                        Dashboard
-                    </a>
-                </li>
+</div>
+<div class="app-header__menu">
+    <span>
+        <button type="button" class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
+            <span class="btn-icon-wrapper">
+                <i class="fa fa-ellipsis-v fa-w-6"></i>
+            </span>
+        </button>
+    </span>
+</div>
+<div class="scrollbar-sidebar">
+    <div class="app-sidebar__inner">
+        <ul class="vertical-nav-menu" id="sidebar-menu">
+            <!-- Dashboard -->
 
-                <!-- Students Management -->
-                <li class="app-sidebar__heading">Student Management</li>
-                <li>
-                    <a href="#">
-                        <i class="metismenu-icon pe-7s-study"></i>
-                        Students
-                        <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
-                    </a>
-                    <ul>
-                        <li>
-                            <a href="{% url 'students:student_list' %}">
-                                <i class="metismenu-icon"></i>
-                                Students Directory
-                            </a>
-                        </li>
-                        <li>
-                            <a href="{% url 'students:student_create' %}">
-                                <i class="metismenu-icon"></i>
-                                New Admission
-                            </a>
-                        </li>
-                    </ul>
-                </li>
+            <li class="app-sidebar__heading">MENU</li>
 
-                <!-- Academic Management -->
-                <li class="app-sidebar__heading">Academic Management</li>
-                <li>
-                    <a href="#">
-                        <i class="metismenu-icon pe-7s-study"></i>
-                        Academic Structure
-                        <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
-                    </a>
-                    <ul>
-                        <li>
-                            <a href="{% url 'academics:academic_level_list' %}">
-                                <i class="metismenu-icon"></i>
-                                Academic Levels
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <i class="metismenu-icon"></i>
-                                Classes
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
+            <li>
+                <a href="{% url 'core:home' %}">
+                    <i class="metismenu-icon pe-7s-home"></i>
+                    Dashboard
+                </a>
+            </li>
+
+            <!-- Students Management -->
+            <li>
+                <a href="#">
+                    <i class="metismenu-icon pe-7s-study"></i>
+                    Students
+                    <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
+                </a>
+                <ul>
+                    <li>
+                        <a href="{% url 'students:student_list' %}">
+                            <i class="metismenu-icon"></i>
+                            Students Directory
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{% url 'students:student_create' %}">
+                            <i class="metismenu-icon"></i>
+                            New Admission
+                        </a>
+                    </li>
+                </ul>
+            </li>
+
+            <!-- Academic Management -->
+            <li>
+                <a href="#">
+                    <i class="metismenu-icon pe-7s-study"></i>
+                    Academic Structure
+                    <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
+                </a>
+                <ul>
+                    <li>
+                        <a href="{% url 'academics:academic_level_list' %}">
+                            <i class="metismenu-icon"></i>
+                            Academic Levels
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <i class="metismenu-icon"></i>
+                            Classes
+                        </a>
+                    </li>
+                </ul>
+            </li>
+
+            <!-- Divider -->
+            <li class="divider"></li>
+
+            <!-- System Administration -->
+            <li class="app-sidebar__heading">COMPONENTS</li>
+
+            <li>
+                <a href="{% url 'accounts:user_account_settings' %}">
+                    <i class="metismenu-icon pe-7s-user"></i>
+                    Account Settings
+                </a>
+            </li>
+
+            <li>
+                <a href="{% url 'accounts:logout' %}">
+                    <i class="metismenu-icon pe-7s-power"></i>
+                    Logout
+                </a>
+            </li>
+        </ul>
     </div>
 </div>
