--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -64,6 +64,90 @@
                             New Admission
                         </a>
                     </li>
+                    <li>
+                        <a href="">
+                            <i class="metismenu-icon"></i>
+                            Guardians
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <i class="metismenu-icon"></i>
+                            Dormitories
+                        </a>
+                    </li>
+                </ul>
+            </li>
+
+            <!-- Staff Management -->
+            <li>
+                <a href="#">
+                    <i class="metismenu-icon pe-7s-users"></i>
+                    Human Resources
+                    <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
+                </a>
+                <ul>
+                    <!-- HR Dashboard -->
+                    <li>
+                        <a href="{% url 'hr:hr_dashboard' %}">
+                            <i class="metismenu-icon"></i>
+                            HR Dashboard
+                        </a>
+                    </li>
+
+                    <!-- Staff -->
+                    <li>
+                        <a href="{% url 'hr:staff_list' %}">
+                            <i class="metismenu-icon"></i>
+                            Staff Directory
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{% url 'hr:staff_create_wizard' %}">
+                            <i class="metismenu-icon"></i>
+                            Add New Staff
+                        </a>
+                    </li>
+
+                    <!-- Teachers -->
+                    <li>
+                        <a href="{% url 'hr:teacher_list' %}">
+                            <i class="metismenu-icon"></i>
+                            Teachers
+                        </a>
+                    </li>
+
+                    <!-- Departments -->
+                    <li>
+                        <a href="{% url 'hr:department_list' %}">
+                            <i class="metismenu-icon"></i>
+                            Departments
+                        </a>
+                    </li>
+
+                    <!-- Designations -->
+                    <li>
+                        <a href="{% url 'hr:designation_list' %}">
+                            <i class="metismenu-icon"></i>
+                            Designations
+                        </a>
+                    </li>
+
+                    <!-- Contracts -->
+                    <li>
+                        <a href="{% url 'hr:contract_list' %}">
+                            <i class="metismenu-icon"></i>
+                            Contracts
+                        </a>
+                    </li>
+
+                    <!-- Contract Types -->
+                    <li>
+                        <a href="{% url 'hr:contract_type_list' %}">
+                            <i class="metismenu-icon"></i>
+                            Contract Types
+                        </a>
+                    </li>
                 </ul>
             </li>
 
@@ -74,21 +158,66 @@
                     Academic Structure
                     <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
                 </a>
+
                 <ul>
+                    <!-- Academic Sessions -->
+                    <li>
+                        <a href="{% url 'academics:academic_session_list' %}">
+                            <i class="metismenu-icon"></i>
+                            Academic Sessions
+                        </a>
+                    </li>
+
+                    <!-- Academic Levels -->
                     <li>
                         <a href="{% url 'academics:academic_level_list' %}">
                             <i class="metismenu-icon"></i>
                             Academic Levels
                         </a>
                     </li>
+
+                    <!-- Classes -->
                     <li>
-                        <a href="">
+                        <a href="{% url 'academics:class_list' %}">
                             <i class="metismenu-icon"></i>
                             Classes
                         </a>
                     </li>
+
+                    <!-- Classrooms -->
+                    <li>
+                        <a href="{% url 'academics:classroom_list' %}">
+                            <i class="metismenu-icon"></i>
+                            Classrooms
+                        </a>
+                    </li>
+
+                    <!-- Subjects -->
+                    <li>
+                        <a href="{% url 'academics:subject_list' %}">
+                            <i class="metismenu-icon"></i>
+                            Subjects
+                        </a>
+                    </li>
+
+                    <!-- Class Subjects -->
+                    <li>
+                        <a href="{% url 'academics:class_subject_list' %}">
+                            <i class="metismenu-icon"></i>
+                            Class Subjects
+                        </a>
+                    </li>
+
+                    <!-- Holidays & Breaks -->
+                    <li>
+                        <a href="{% url 'academics:holiday_list' %}">
+                            <i class="metismenu-icon"></i>
+                            Holidays & Breaks
+                        </a>
+                    </li>
                 </ul>
             </li>
+
 
             <!-- Divider -->
             <li class="divider"></li>
