--- a/apps/accounts/templates/login.html
+++ b/apps/accounts/templates/login.html
@@ -115,10 +115,14 @@
                                             <!-- Email Field -->
                                             <div class="col-md-12 mb-3">
                                                 <label for="{{ form.email.id_for_label }}" class="form-label">Email address</label>
-                                                {{ form.email }}
+                                                <input type="email" 
+                                                    class="form-control {% if form.email.errors %}is-invalid{% endif %}" 
+                                                    name="{{ form.email.name }}"
+                                                    value="{{ form.email.value|default:'' }}"
+                                                    placeholder="Enter your email">
                                                 {% if form.email.errors %}
                                                     {% for error in form.email.errors %}
-                                                    <div class="invalid-feedback d-block">{{ error }}</div>
+                                                    <div class="invalid-feedback">{{ error }}</div>
                                                     {% endfor %}
                                                 {% endif %}
                                             </div>
@@ -126,7 +130,12 @@
                                             <!-- Password Field -->
                                             <div class="col-md-12 mb-3">
                                                 <label for="{{ form.password.id_for_label }}" class="form-label">Password</label>
-                                                {{ form.password }}
+                                                <div class="input-group">
+                                                    {{ form.password }}
+                                                    <button class="btn btn-outline-secondary" type="button" id="togglePassword">
+                                                        <i class="fas fa-eye"></i>
+                                                    </button>
+                                                </div>
                                                 {% if form.password.errors %}
                                                     {% for error in form.password.errors %}
                                                     <div class="invalid-feedback d-block">{{ error }}</div>
@@ -167,6 +176,24 @@
         <script type="text/javascript" src="{% static 'vendors/jquery/dist/jquery.min.js' %}"></script>
         <script type="text/javascript" src="{% static 'vendors/bootstrap/dist/js/bootstrap.bundle.min.js' %}"></script>
         <script type="text/javascript" src="{% static 'vendors/slick-carousel/slick/slick.min.js' %}"></script>
+
+        <!-- 3. Add JavaScript for password toggle -->
+        <script>
+            document.getElementById('togglePassword')?.addEventListener('click', function() {
+                const passwordField = document.getElementById('{{ form.password.id_for_label }}');
+                const icon = this.querySelector('i');
+                
+                if (passwordField.type === 'password') {
+                    passwordField.type = 'text';
+                    icon.classList.remove('fa-eye');
+                    icon.classList.add('fa-eye-slash');
+                } else {
+                    passwordField.type = 'password';
+                    icon.classList.remove('fa-eye-slash');
+                    icon.classList.add('fa-eye');
+                }
+            });
+        </script>
         
         <!-- Custom JS -->
         <script type="text/javascript" src="{% static 'js/carousel-slider.js' %}"></script>
